--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 <div class="preloader">
-    <img  data-src="img/loader_black.gif" alt="">
+    <img  src="img/loader_black.gif" alt="">
 </div>
 
 <!-- End Loading ===================== -->
