--- a/index.html
+++ b/index.html
@@ -33,14 +33,7 @@
 	    
 <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="e65dcc27-b421-4c15-a9f8-58db923562e0" data-blockingmode="auto" type="text/javascript"></script>
     
-<script>
-    [].forEach.call(document.querySelectorAll('img[data-src]'), function (img) {
-        img.setAttribute('src', img.getAttribute('data-src'));
-        img.onload = function () {
-            img.removeAttribute('data-src');
-        };
-    });
-</script>
+
 
 
 
@@ -262,7 +255,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/294569571?title=0&byline=0&portrait=0')">
-                    <img data-src = "img/portfolio-new/thebar.png">
+                    <img data-src = "img/portfolio-new/thebar.webp">
                     <div class="img_text df">
                         <p>The Bar</p>
                         <div class="df img_span">
@@ -272,7 +265,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/491529677?title=0&byline=0&portrait=0')">
-                    <img  data-src = "img/portfolio-new/coronavirus.webp?ver=2">
+                    <img  data-src = "img/portfolio-new/coronavirus.webp">
                     <div class="img_text df">
                         <p>Coronavirus Social Video</p>
                         <div class="df img_span">
@@ -282,7 +275,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/375507793?title=0&byline=0&portrait=0')">
-                    <img  data-src = "img/portfolio-new/nookids.png">
+                    <img  data-src = "img/portfolio-new/nookids.webp">
                     <div class="img_text df">
                         <p>Nookids Academy</p>
                         <div class="df img_span">
@@ -297,7 +290,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/462629286?title=0&byline=0&portrait=0')">
-                    <img  data-src ="img/portfolio-new/vkenaf.png">
+                    <img  data-src ="img/portfolio-new/vkenaf.webp">
                     <div class="img_text df">
                         <p>VKenaf</p>
                         <div class="df img_span">
@@ -307,13 +300,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/291219213?title=0&byline=0&portrait=0')">
-                    <img  data-src="img/portfolio-new/reikartz.png">
+                    <img  data-src="img/portfolio-new/reikartz.webp">
                     <div class="img_text df">
                         <p>Reikartz Hotel Promo Video</p>
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/313620579?title=0&byline=0&portrait=0')">
-                    <img  data-src="img/portfolio-new/beany.png">
+                    <img  data-src="img/portfolio-new/beany.webp">
                     <div class="img_text df">
                         <p>Beani.tv</p>
                         <div class="df img_span">
@@ -323,7 +316,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/370463076?title=0&byline=0&portrait=0')">
-                    <img  data-src= "img/portfolio-new/netsol.png">
+                    <img  data-src= "img/portfolio-new/netsol.webp">
                     <div class="img_text df">
                         <p>Netsol & Wholesale</p>
                         <div class="df img_span">
@@ -332,7 +325,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/298179728?title=0&byline=0&portrait=0')">
-                    <img  data-src = "img/portfolio-new/hyling.png">
+                    <img  data-src = "img/portfolio-new/hyling.webp">
                     <div class="img_text df">
                         <p>Hilynk</p>
                         <div class="df img_span">
@@ -341,7 +334,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/357734263?title=0&byline=0&portrait=0')">
-                    <img  data-src="img/portfolio-new/verasity.png">
+                    <img  data-src="img/portfolio-new/verasity.webp">
                     <div class="img_text df">
                         <p>Verasity Video</p>
                         <div class="df img_span">
@@ -350,7 +343,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/304838862?title=0&byline=0&portrait=0')">
-                    <img  data-src="img/portfolio-new/everycoin.png">
+                    <img  data-src="img/portfolio-new/everycoin.webp">
                     <div class="img_text df">
                         <p>EveryCoin Ico video</p>
                         <div class="df img_span">
@@ -359,7 +352,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/286487582?title=0&byline=0&portrait=0')">
-                    <img  data-src="img/portfolio-new/simplebyte.png">
+                    <img  data-src="img/portfolio-new/simplebyte.webp">
                     <div class="img_text df">
                         <p>SimpleByte</p>
                         <div class="df img_span">
@@ -368,7 +361,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/285259643?title=0&byline=0&portrait=0')">
-                    <img  data-src="img/portfolio-new/fulltoken.png">
+                    <img  data-src="img/portfolio-new/fulltoken.webp">
                     <div class="img_text df">
                         <p>FullToken</p>
                         <div class="df img_span">
@@ -377,7 +370,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/289846687?title=0&byline=0&portrait=0')">
-                    <img data-src="img/portfolio-new/pharmap.png">
+                    <img data-src="img/portfolio-new/pharmap.webp">
                     <div class="img_text df">
                         <p>Pharmap</p>
                         <div class="df img_span">
@@ -392,7 +385,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/402846805?title=0&byline=0&portrait=0')">
-                    <img  data-src="img/portfolio-new/firstday.webp?ver=2">
+                    <img  data-src="img/portfolio-new/firstday.webp">
                     <div class="img_text df">
                         <p>Beemloop First Day</p>
                     </div>
@@ -410,7 +403,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/430309051?title=0&byline=0&portrait=0')">
-                    <img data-src ="img/portfolio-new/animationstyles.webp?ver=2">
+                    <img data-src ="img/portfolio-new/animationstyles.webp">
                     <div class="img_text df">
                         <p>Many Animation Styles</p>
                     </div>
@@ -428,19 +421,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/293711349?title=0&byline=0&portrait=0')">
-                    <img  data-src = "img/portfolio-new/geeba.webp?ver=2">
+                    <img  data-src = "img/portfolio-new/geeba.webp">
                     <div class="img_text df">
                         <p>Geeba</p>
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/285256944?title=0&byline=0&portrait=0')">
-                    <img  data-src ="img/portfolio-new/collectivebrain.webp?ver=2">
+                    <img  data-src ="img/portfolio-new/collectivebrain.webp">
                     <div class="img_text df">
                         <p>Collective Brain</p>
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/503031640?title=0&byline=0&portrait=0')">
-                    <img  data-src = "img/portfolio-new/blackworld.png">
+                    <img  data-src = "img/portfolio-new/blackworld.webp">
                     <div class="img_text df">
                         <p>Blackcomb Video</p>
                         <div class="df img_span">
@@ -449,7 +442,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                 </li>
                 <li onclick="videoUrl('https://player.vimeo.com/video/507982744?title=0&byline=0&portrait=0')">
-                    <img  data-src ="img/portfolio-new/learning.png">
+                    <img  data-src ="img/portfolio-new/learning.webp">
                     <div class="img_text df">
                         <p>Pangea Video</p>
                         <div class="df img_span">
@@ -803,7 +796,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- ===================== Start Services Tabs -->
 
-<section class="serv-tabs section-padding bg-img lazy" data-overlay-dark="7" data-background="img/5.webp">
+<section class="serv-tabs section-padding bg-img lazy" data-overlay-dark="7" data-background="img/5-min.jpg">
     <div class="container">
         <div class="row">
 
@@ -1366,7 +1359,14 @@ wa widget -->
 
     });
 </script>
-
+<script>
+    [].forEach.call(document.querySelectorAll('img[data-src]'), function (img) {
+        img.setAttribute('src', img.getAttribute('data-src'));
+        img.onload = function () {
+            img.removeAttribute('data-src');
+        };
+    });
+</script>
 <!-- Google Adservices-->
 <script>
     /* <![CDATA[ */
