--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 <div class="preloader">
-    <img   data-src="img/loader_black.gif" alt="">
+    <img   data-src="img/loader.gif" alt="">
 </div>
 
 <!-- End Loading ===================== -->
