--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <!-- Google Fonts -->
-    <link rel="preload"  href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap">
-    <link rel="preload"  href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800&display=swap">
+    <link   href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap">
+    <link   href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800&display=swap">
     <!-- Plugins -->
     <link rel="stylesheet" href="css/libs.min.css">
     <!-- Core Style Css -->
