--- a/index.html
+++ b/index.html
@@ -1112,8 +1112,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6 map">
-                <div id="ieatmaps"></div>
-                <div id="map-canvas" class="map-canvas"></div>
+                <!-- <div id="ieatmaps"></div>
+                 <div id="map-canvas" class="map-canvas"></div> -->
+                <img src="img/mapb.jpg" alt="map-canvas">
             </div>
             <div class="col-lg-6 contact-form">
                 <form class="form" id="contact-form" action="php/mail.php" method="POST">
