--- a/index.html
+++ b/index.html
@@ -1111,12 +1111,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <section id="scroll-contact-us" class="contact" data-scroll-index="5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-6 map">
-                <!-- <div id="ieatmaps"></div>
-                 <div id="map-canvas" class="map-canvas"></div> -->
-                <img src="img/mapb.jpg" alt="map-canvas">
+            <div class="col-lg-7 map">
+               <!-- <div id="ieatmaps"></div> -->
+                 <!-- <div id="map-canvas" class="map-canvas"></div> -->
+                <img src="img/mapb.jpg" alt="map-canvas" id="map-canvas" class="map-canvas" >
             </div>
-            <div class="col-lg-6 contact-form">
+            <div class="col-lg-5 contact-form">
                 <form class="form" id="contact-form" action="php/mail.php" method="POST">
                     <div class="messages"></div>
                     <div class="controls">
