--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl" data-src ="img/team/dima.jpg" alt="Dima Buriachenko">
                     </div>
                     <div class="info">
-                        <div class="h6">Dima</div>
+                        <div class="h6 lng-founder">Dima</div>
                         <span>Founder</span>
                     </div>
                 </div>
@@ -891,7 +891,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src = "img/team/talli.jpg" alt="Talli">
                     </div>
                     <div class="info">
-                        <div class="h6">Talli</div>
+                        <div class="h6 lng-ceo">Talli</div>
                         <span>CEO</span>
                     </div>
                 </div>
@@ -900,7 +900,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src ="img/team/sergey.jpg" alt="Sergey">
                     </div>
                     <div class="info">
-                        <div class="h6">Sergey</div>
+                        <div class="h6 lng-project">Sergey</div>
                         <span>Project Manager</span>
                     </div>
                 </div>
@@ -909,7 +909,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src ="img/team/nataliia.jpg" alt="Nataliia">
                     </div>
                     <div class="info">
-                        <div class="h6">Nataliia</div>
+                        <div class="h6 lng-art">Nataliia</div>
                         <span>Art Director / Motion Designer</span>
                     </div>
                 </div>
@@ -918,7 +918,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src ="img/team/darina.jpg" alt="Darina">
                     </div>
                     <div class="info">
-                        <div class="h6">Darina</div>
+                        <div class="h6 lng-ill">Darina</div>
                         <span>Team Lead / Illustrator</span>
                     </div>
                 </div>
@@ -927,7 +927,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/artur.jpg" alt="Artur">
                     </div>
                     <div class="info">
-                        <div class="h6">Artur</div>
+                        <div class="h6 lng-mot">Artur</div>
                         <span>Motion Designer</span>
                     </div>
                 </div>
@@ -936,7 +936,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/nazar.jpg" alt="Nazar">
                     </div>
                     <div class="info">
-                        <div class="h6">Nazar</div>
+                        <div class="h6 lng-hum">Nazar</div>
                         <span>Human Resources Developer</span>
                     </div>
                 </div>
@@ -945,7 +945,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/lilia.jpg" alt="Lilia">
                     </div>
                     <div class="info">
-                        <div class="h6">Lilia</div>
+                        <div class="h6 lng-sen">Lilia</div>
                         <span>Senior Illustrator</span>
                     </div>
                 </div>
@@ -954,7 +954,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/vlad.jpg" alt="Vlad">
                     </div>
                     <div class="info">
-                        <div class="h6">Vlad</div>
+                        <div class="h6 lng-lead">Vlad</div>
                         <span>Team Lead / Motion Designer</span>
                     </div>
                 </div>
@@ -963,7 +963,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src ="img/team/denis.jpg" alt="Denis">
                     </div>
                     <div class="info">
-                        <div class="h6">Denis</div>
+                        <div class="h6 lng-des">Denis</div>
                         <span>Motion Designer</span>
                     </div>
                 </div>
@@ -972,7 +972,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src ="img/team/vladimir.jpg" alt="Vladimir">
                     </div>
                     <div class="info">
-                        <div class="h6">Vladimir</div>
+                        <div class="h6 lng-mot2">Vladimir</div>
                         <span>Motion Designer</span>
                     </div>
                 </div>
@@ -981,7 +981,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src ="img/team/anna.jpg" alt="Anna">
                     </div>
                     <div class="info">
-                        <div class="h6">Anna</div>
+                        <div class="h6 lng-lead2">Anna</div>
                         <span>Team Lead / Motion Designer</span>
                     </div>
                 </div>
@@ -990,7 +990,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src ="img/team/taras.jpg" alt="Taras">
                     </div>
                     <div class="info">
-                        <div class="h6">Taras</div>
+                        <div class="h6 lng-lead3">Taras</div>
                         <span>Team Lead / Illustrator</span>
                     </div>
                 </div>
@@ -1000,7 +1000,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/elizaveta-motion-designer-odessa.jpg" alt="Elizaveta">
                     </div>
                     <div class="info">
-                        <div class="h6">Elizaveta</div>
+                        <div class="h6 lng-lead4">Elizaveta</div>
                         <span>Team Lead / Motion Designer</span>
                     </div>
                 </div>
@@ -1009,7 +1009,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/elizaveta-motion-designer-odessa-.jpg" alt="Elizaveta">
                     </div>
                     <div class="info">
-                        <div class="h6">Elizaveta</div>
+                        <div class="h6 lng-lead5">Elizaveta</div>
                         <span>Team Lead / Motion Designer</span>
                     </div>
                 </div>
@@ -1018,7 +1018,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/elena_illustrator_odessa.jpg" alt="Elena">
                     </div>
                     <div class="info">
-                        <div class="h6">Elena</div>
+                        <div class="h6 lng-lead6">Elena</div>
                         <span>Illustrator</span>
                     </div>
                 </div>
@@ -1027,7 +1027,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/stepan-sound-designer-odessa.jpg" alt="Stepan">
                     </div>
                     <div class="info">
-                        <div class="h6">Stepan</div>
+                        <div class="h6 lng-lead7">Stepan</div>
                         <span>Sound Designer</span>
                     </div>
                 </div>
@@ -1036,7 +1036,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/aleksandr-motion-desinger-odessa.jpg" alt="Aleksandr">
                     </div>
                     <div class="info">
-                        <div class="h6">Aleksandr</div>
+                        <div class="h6 lng-lead8">Aleksandr</div>
                         <span>Team Lead / Motion Designer</span>
                     </div>
                 </div>
@@ -1045,7 +1045,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/anna_illustrator_odessa.jpg" alt="Anna">
                     </div>
                     <div class="info">
-                        <div class="h6">Anna</div>
+                        <div class="h6 lng-lead9">Anna</div>
                         <span>Illustrator</span>
                     </div>
                 </div>
@@ -1055,7 +1055,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl"  data-src="img/team/veronika-illustrator-odessa.jpg" alt="Veronika">
                     </div>
                     <div class="info">
-                        <div class="h6">Veronika</div>
+                        <div class="h6 lng-lead10">Veronika</div>
                         <span>Team Lead / Illustrator</span>
                     </div>
                 </div>
@@ -1064,7 +1064,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img class="lazyOwl" data-src="img/team/vika-llustrator-odessa.jpg" alt="Viktoriia">
                     </div>
                     <div class="info">
-                        <div class="h6">Viktoriia</div>
+                        <div class="h6 lng-lead11">Viktoriia</div>
                         <span>Illustrator</span>
                     </div>
                 </div>
