--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                     <div class="info">
                         <div class="h6 lng-lead4">Elizaveta</div>
-                        <span>Team Lead / Motion Designer</span>
+                        <span>Motion Designer</span>
                     </div>
                 </div>
                 <div class="titem text-center">
@@ -1024,7 +1024,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="titem text-center">
                     <div class="team-img">
-                        <img class="lazyOwl"  data-src="img/team/stepan-sound-designer-odessa.jpg" alt="Stepan">
+                        <img class="lazyOwl"  src="img/team/stepan-sound-designer-odessa.jpg" alt="Stepan">
                     </div>
                     <div class="info">
                         <div class="h6 lng-lead7">Stepan</div>
@@ -1033,7 +1033,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="titem text-center">
                     <div class="team-img">
-                        <img class="lazyOwl"  data-src="img/team/aleksandr-motion-desinger-odessa.jpg" alt="Aleksandr">
+                        <img class="lazyOwl"  src="img/team/aleksandr-motion-desinger-odessa.jpg" alt="Aleksandr">
                     </div>
                     <div class="info">
                         <div class="h6 lng-lead8">Aleksandr</div>
@@ -1042,7 +1042,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="titem text-center">
                     <div class="team-img">
-                        <img class="lazyOwl"  data-src="img/team/anna_illustrator_odessa.jpg" alt="Anna">
+                        <img class="lazyOwl"  src="img/team/anna_illustrator_odessa.jpg" alt="Anna">
                     </div>
                     <div class="info">
                         <div class="h6 lng-lead9">Anna</div>
