--- a/index.html
+++ b/index.html
@@ -250,12 +250,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="slideshow-container">
         <div class="owl-videos navigation">
             <div class="owl-carousel owl-theme">
+                
                 <li onclick="videoUrl('https://player.vimeo.com/video/513434926?title=0&byline=0&portrait=0')">
                     <img  data-src ="img/portfolio-new/amazon.webp">
                     <div class="img_text df">
                         <p>Amazon Go</p>
                         <div class="df img_span">
                             <span>Characters</span>
+                        </div>
+                    </div>
+                </li>
+                <li onclick="videoUrl('https://player.vimeo.com/video/519874813?title=0&byline=0&portrait=0')">
+                    <img  src ="img/portfolio-new/platform-cloud.jpg">
+                    <div class="img_text df">
+                        <p>DAFI Animation</p>
+                        <div class="df img_span">
+                            <span>Kinetic typography</span>
                         </div>
                     </div>
                 </li>
@@ -1269,7 +1279,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
 	<a class="subscribe lng-subs" href="#subscribe-form" rel="nofollow" onmouseover="this.style.textDecoration='underline';" onmouseout="this.style.textDecoration='none';" style="color: #777; margin-bottom: 14px;">Subscribe to our newsletter</a>
 
-        <p>&copy; 2020 Rights Reserved.</p>
+        <p>&copy; 2021 Rights Reserved.</p>
 
     </div>
 
