--- a/index.html
+++ b/index.html
@@ -1225,9 +1225,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <div class="h6 lng-em">Email :</div>
                             <p>
                                 <a rel="nofollow"
-                                   href="mailto:beemloop.com@gmail.com">beemloop.com@gmail.com</a>
+                                   href="mailto:info@beemloop.com "> info@beemloop.com </a>
                                 <br>
-                                <a rel="nofollow" href="mailto:talli@beemloop.com">talli@beemloop.com</a>
+                                <a rel="nofollow" href="mailto:talli@beemloop.com">  </a>
                             </p>
                         </div>
                     </div>
