--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                              <!-- <b>EXPLAINER VIDEOS</b>-->
                                             </span>
                                 </div>
-                                <p class="pheader lng-more">More than 500 of our clients got their products explained using videos that we created.<br> <p class="lng-br">In just 90 seconds customer will know everything about your product.</p></p>
+                                <!-- <p class="pheader lng-more">More than 500 of our clients got their products explained using videos that we created. <p class="lng-br">In just 90 seconds customer will know everything about your product.</p></p> -->
+                                <p class="pheader lng-more">More than 500 of our clients got their products explained using videos that we created. In just 90 seconds customer will know everything about your product.</p>
                                 <a class="popup-with-form butn butn-bg" href="#standard"
                                            onclick="gtag('event', 'click-on-popup2', {'event_category': '2-min-video'});">
                                     <span class="lng-quote">Get A Quote</span>
