--- a/index.html
+++ b/index.html
@@ -1412,13 +1412,13 @@ wa widget -->
 <script src="js/libs.min.js"></script>
 <script src="js/main.js?ver=5"></script>
 
-<script src="js/jquery.instagramFeed.js"></script>
+<!-- <script src="js/jquery.instagramFeed.js"></script> -->
 <!-- custom scripts -->
 <script src="js/youtube_video.js?ver=22"></script>
 
 <script src="js/jquery.cookie.js"></script>
 <!-- google map api -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzTLmIURCuTzjUJwHdNzimU-KHd_woG1w" async defer></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzTLmIURCuTzjUJwHdNzimU-KHd_woG1w" async defer></script> -->
 
 
 <script>
