--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                     <p class="lng-voice5">
                                         With our wide selection of dedicated and professional voice-over talents coupled with our expertise in voice direction and production, rest assured that your final product will be quite simply a (pardon the pun) Suite Sound.
                                     </p>
-                                    <a href="https://beemloop.com/voiceoverartists.html" class="h5 btn-calculate">
+                                    <a href="https://beemloop.com/voiceoverartists.html" class="h5 btn-calculate kler">
                                         <span class="lng-voice6">FEMALE Voiceover</span>
                                     </a>
                                 </div>
@@ -879,10 +879,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
 
             <div class="filtering_ourteam col-sm-12">
-                <span data-filter_ourteam='all_team' class="activenow">All</span>
-                <span data-filter_ourteam='zhytomyr'>Zhytomyr</span>
-                <span data-filter_ourteam='sumy'>Sumy</span>
-                <span data-filter_ourteam='odessa'>Odessa</span>
+                <span data-filter_ourteam='all_team' class="activenow lng-all1">All</span>
+                <span data-filter_ourteam='zhytomyr' class="lng-all2">Zhytomyr</span>
+                <span data-filter_ourteam='sumy' class="lng-all3">Sumy</span>
+                <span data-filter_ourteam='odessa' class="lng-all4">Odessa</span>
             </div>
             <div class="clearfix"></div>
 
@@ -1122,12 +1122,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <section id="scroll-contact-us" class="contact" data-scroll-index="5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-7 map">
-               <!-- <div id="ieatmaps"></div> -->
-                 <!-- <div id="map-canvas" class="map-canvas"></div> -->
-                <img src="img/mapb.jpg" alt="map-canvas" id="map-canvas" class="map-canvas" >
+            <div class="col-lg-6">
+               <div id="ieatmaps"></div>
+                  <div id="map-canvas" class="map-canvas"></div>
+                <!-- <img src="img/mapb.jpg" alt="map-canvas" id="map-canvas" class="map-canvas" > -->
             </div>
-            <div class="col-lg-5 contact-form">
+            <div class="col-lg-6 contact-form">
                 <form class="form" id="contact-form" action="php/mail.php" method="POST">
                     <div class="messages"></div>
                     <div class="controls">
@@ -1280,7 +1280,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
 	<a class="subscribe lng-subs" href="#subscribe-form" rel="nofollow" onmouseover="this.style.textDecoration='underline';" onmouseout="this.style.textDecoration='none';" style="color: #777; margin-bottom: 14px;">Subscribe to our newsletter</a>
 
-        <p>&copy; 2021 Rights Reserved.</p>
+        <p class="lng-reserved">&copy; 2021 Rights Reserved.</p>
 
     </div>
 
@@ -1418,7 +1418,7 @@ wa widget -->
 
 <script src="js/jquery.cookie.js"></script>
 <!-- google map api -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzTLmIURCuTzjUJwHdNzimU-KHd_woG1w" async defer></script> -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzTLmIURCuTzjUJwHdNzimU-KHd_woG1w" async defer></script>
 
 
 <script>
